feat: make agent evaluations durable