@@ -5,13 +5,20 @@ import org.springframework.context.annotation.Configuration;
 
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
 
 @Configuration
 public class AgentEvaluationAsyncConfiguration {
 
     @Bean(name = "agentEvaluationExecutor", destroyMethod = "close")
-    ExecutorService agentEvaluationExecutor() {
-        return Executors.newSingleThreadExecutor(Thread.ofVirtual()
+    ExecutorService agentEvaluationExecutor(AgentEvaluationQueueProperties properties) {
+        return Executors.newFixedThreadPool(properties.safeConcurrency(), Thread.ofVirtual()
                 .name("agent-evaluation-", 0).factory());
+    }
+
+    @Bean(name = "agentEvaluationHeartbeatExecutor", destroyMethod = "close")
+    ScheduledExecutorService agentEvaluationHeartbeatExecutor() {
+        return Executors.newSingleThreadScheduledExecutor(Thread.ofVirtual()
+                .name("agent-evaluation-heartbeat-", 0).factory());
     }
 }
